# ci-poetry

./: README.md  pyproject.toml
.github/workflows/: poetry-deploy.yml
